@@ -23,6 +23,7 @@ Change Log:
 - Add a warning when using a wrong value in the PayPal Standard settings
 - Add a few new API functions (see the API Docs link in the Help page)
 - Add new functions to Payment Logs to manually handle invalid payments
+- Add new template tag function `ms_has_membership()`
 - Improve payment logs to display additional/better information for errors
 - Improve the layout of the coupon fields in the payment confirmation form
 - Improve HTML output of shortcodes to be compatible with most themes (remove line breaks inside HTML tags)
